# local-files-chat

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: prepare-ocr.mjs  release.ps1  release.sh
scripts/macos/: README-macOS-portable.txt  RemoveQuarantine.command  adhoc-sign.sh  make-portable-zip.sh
src/: App.css  App.helpers.test.ts  App.helpers.ts  App.integration.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  library.rs  main.rs  ollama.rs  rag.rs
src/test/: setup.ts
