[package]
name = "local-files-chat"
version = "0.5.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "local_files_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
thiserror = "1"
anyhow = "1"
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
pdf-extract = "0.10"
whatlang = "0.18"
sha2 = "0.10.9"
notify = "6"
zip = "0.6"
quick-xml = "0.31"
